integrador_2/My Car/mycar/src/main/java/com/example/mycar/error/EntidadRelacionadaException.java
package com.example.mycar.error;

public class EntidadRelacionadaException extends Exception {
    
	public EntidadRelacionadaException(String mensaje) {
        super(mensaje);
    }
}
